--- a/views/news.ejs
+++ b/views/news.ejs
@@ -16,13 +16,15 @@
     <!-- <link rel="stylesheet" href="/styles/news.css"> -->
 </head>
 <body>
+
     <%- include('./partials/topbar.ejs') %>
 
-    <div id="news">
+    <div id="news" style="margin-top: 50%">
 
     </div>
 
     <script src="/scripts/getNews.js"></script>
+    <script src="/scripts/showNews.js"></script>
     
 </body>
 </html>
