--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,12 +20,9 @@
     <%- include ('./partials/topbar.ejs')%>
 
     <div class="centered">
-        <h1 style="position: absolute; top: 34vh; font-weight: 200;">
+        <h1 style="position: absolute; top: 34vh; font-weight: 200; text-align: center">
             As melhores notícias na palma da sua mão.
         </h1>
-    </div>
-
-    <div class="centered">
         <h2 style="position: absolute; top: 47vh; color: #C4C4C4; margin-top: 5px; font-weight: 200;">
             Fique informado!
         </h2>
