--- a/views/partials/topbar.ejs
+++ b/views/partials/topbar.ejs
@@ -1,15 +1,29 @@
 <nav id="topbar">
 
-    <div class="left">
+    <div id="topbar-title-container">
         <h1 id="topbar-title">The NEWSletter</h1>
     </div>
 
-    <div class="options right">
+    <div class="options">
         <ul>
             <li class="option"><a href="/">Home</a></li>
             <li class="option"><a href="/news">Notícias</a></li>
             <li class="option"><a href="/write-new">Escreva sua notícia</a></li>
         </ul>
     </div>
+
+    <div id="mobile-menu-btn">
+        <img src="/images/menu-mobile.svg" width="30px" height="22px">
+    </div>
+
+    <nav id="top-bar-mobile">
+        <ul>
+            <li class="mobile-option"><a href="/">Home</a></li>
+            <li class="mobile-option"><a href="/news">Notícias</a></li>
+            <li class="mobile-option"><a href="/write-new">Escreva sua notícia</a></li>
+        </ul>
+    </nav>
+
+    <script src="/scripts/mobile-menu.js"></script>
 
 </nav>
