--- a/views/write-new.ejs
+++ b/views/write-new.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escreva uma notícia</title>
 
-    <link rel="stylesheet" href="styles/variables.css">
-    <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="/styles/variables.css">
+    <link rel="stylesheet" href="/styles/fonts.css">
     <link rel="stylesheet" href="/styles/styles.css">
 
     <!-- Partials styles -->
@@ -54,7 +54,6 @@
         </div>
     </div>
 
-    <script src="/scripts/new-validation.js"></script>
     <script src="/scripts/new-validation-error.js"></script>
 </body>
 </html>
