--- a/public/styles/partials/topbar.css
+++ b/public/styles/partials/topbar.css
@@ -2,31 +2,82 @@
     position: fixed;
     top: 0;
     z-index: 2;
+    display: flex;
+    align-items: center;
     background-color: #FFFFFF;
     color: var(--primary-color);
     font-family: 'Open Sans', sans-serif;
     font-weight: 800;
     border-bottom: 1px solid #C4C4C4;
-    width: 100%;
+    width: 100vw;
+    max-width: 100%;
     height: 75px;
 }
 
+#topbar-title-container {
+    margin-right: auto;
+}
+
 #topbar-title {
-    position: absolute !important;
-    margin-top: 20px;
     margin-left: 25px;
 }
 
 .options {
-    margin-top: 28.5px;
     margin-right: 25px;
+    margin-left: auto;
 }
 
 .option {
+    display: inline-block;
+    list-style: none;
     margin-left: 25px;
 }
 
-.options > ul > li {
+#mobile-menu-btn {
+    display: none; 
+}
+
+#mobile-menu-btn > img {
+    display: block;
+    margin: auto;
+}
+
+#top-bar-mobile {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    visibility: hidden;
+    transition: all 200ms;
+    width: 80vw;
+    max-width: 100%;
+    height: 100vh;
+}
+
+.mobile-option {
     list-style: none;
-    display: inline-block;
+    padding-top: 30px;
+    padding-left: 15px;
+    border-bottom: 2px solid #ad241a;
+    height: 40px;
+}
+
+.mobile-option > a {
+    color: #FFFFFF;
+}
+
+@media (max-width: 640px) {
+    .options {
+        display: none;
+    }
+
+    #mobile-menu-btn {
+        display: flex;
+        align-items: center;
+        margin-right: 25px;
+        margin-left: auto;
+    }  
 }
