--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,12 +1,16 @@
 * {
     margin: 0;
+    padding: 0;
 }
 
 html, body {
-    height: 100%;
-    min-height: 100%;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+    max-height: 100%;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    font-size: 16px;
 }
 
 ::selection {
@@ -21,7 +25,11 @@ html, body {
 
 .centered {
     display: flex !important;
+    flex-direction: row;
     justify-content: center !important;
+    align-items: center !important;
+    width: 100%;
+    height: 100%;
 }
 
 .left {
