--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The latest news</title>
+    <title><%= title %></title>
 
     <link rel="stylesheet" href="/styles/variables.css">
     <link rel="stylesheet" href="/styles/fonts.css">
@@ -13,24 +13,23 @@
     <!-- Partials styles -->
     <link rel="stylesheet" href="/styles/partials/topbar.css">
 
-    <link rel="stylesheet" href="/styles/news.css">
+    <link rel="stylesheet" href="/styles/new.css">
 </head>
 <body>
-
     <%- include('./partials/topbar.ejs') %>
 
-    <div id="news">
+    <div id="new">
+        <h1 id="new-title">
+            <%= title %>
+        </h1>
 
+        <pre id="new-content">
+            <%= content %>
+        </pre>
     </div>
 
-    <div class="centered">
-        <div id="loading-advice">
-            Carregando...
-        </div>
-    </div>
-
-    <script src="/scripts/getNews.js"></script>
-    <script src="/scripts/showNews.js"></script>
-    
+    <footer>
+        <a href="/">Voltar para home</a>
+    </footer>
 </body>
 </html>
